--- a/.gitignore
+++ b/.gitignore
@@ -70,7 +70,6 @@ used_space.png
 
 # macos files
 .DS_STORE
-rgbds-0.5.2-macos-x86-64/rgblink
 
-/rgbds-0.5.2-macos-x86-64
-/rgbds
+rgbds-0.5.2-macos-x86-64
+rgbds
